--- a/index.html
+++ b/index.html
@@ -170,8 +170,9 @@ const G = {
 
 // ── Tau-Prolog helpers ──────────────────────────────────────
 function query(q) {
+  const qDot = q.trimEnd().endsWith('.') ? q : q + '.';
   return new Promise((resolve, reject) => {
-    G.session.query(q, {
+    G.session.query(qDot, {
       success: () => G.session.answer({
         success: ans => resolve(ans),
         fail:    ()  => resolve(null),
