--- a/web/index.html
+++ b/web/index.html
@@ -463,124 +463,10 @@ async function initProlog() {
 }
 
 // ============================================================
-// JS AI — Minimax + Alpha-Beta (runs in ~ms)
+// SWI-Prolog AI server (Render.com)
+// Після деплою замініть URL на вашу:
+const AI_URL = 'https://game-prolog.onrender.com';
 // ============================================================
-
-// board string helpers
-function boardGet(board, cols, r, c) { return board[(r-1)*cols + (c-1)]; }
-function boardSet(board, cols, r, c, v) {
-  const i = (r-1)*cols + (c-1);
-  return board.slice(0, i) + v + board.slice(i+1);
-}
-
-function jsFindBottom(board, rows, cols, col) {
-  for (let r = rows; r >= 1; r--) {
-    const v = boardGet(board, cols, r, col);
-    if (v === 'e') return r;
-    if (v === 'b') continue;
-  }
-  return -1;
-}
-
-function jsDropPiece(board, rows, cols, col, player) {
-  const row = jsFindBottom(board, rows, cols, col);
-  if (row < 0) return null;
-  return { board: boardSet(board, cols, row, col, player), row };
-}
-
-function jsAvailCols(board, cols) {
-  const mid = Math.floor((cols + 1) / 2);
-  const avail = [];
-  for (let c = 1; c <= cols; c++) {
-    if (boardGet(board, cols, 1, c) === 'e') avail.push(c);
-  }
-  avail.sort((a, b) => Math.abs(a - mid) - Math.abs(b - mid));
-  return avail;
-}
-
-function jsCheckWin(board, rows, cols, k, r, c, player) {
-  const dirs = [[0,1],[1,0],[1,1],[1,-1]];
-  for (const [dr, dc] of dirs) {
-    let cnt = 1;
-    for (let d = 1; d < k; d++) {
-      const nr = r+dr*d, nc = c+dc*d;
-      if (nr<1||nr>rows||nc<1||nc>cols) break;
-      if (boardGet(board,cols,nr,nc) !== player) break;
-      cnt++;
-    }
-    for (let d = 1; d < k; d++) {
-      const nr = r-dr*d, nc = c-dc*d;
-      if (nr<1||nr>rows||nc<1||nc>cols) break;
-      if (boardGet(board,cols,nr,nc) !== player) break;
-      cnt++;
-    }
-    if (cnt >= k) return true;
-  }
-  return false;
-}
-
-function jsEval(board, rows, cols, player) {
-  const opp = player === 'x' ? 'o' : 'x';
-  const mid = Math.floor((cols + 1) / 2);
-  let score = 0;
-  for (let r = 1; r <= rows; r++) {
-    for (let c = 1; c <= cols; c++) {
-      const v = boardGet(board, cols, r, c);
-      const w = 3 - Math.min(2, Math.abs(c - mid));
-      if (v === player) score += w;
-      else if (v === opp) score -= w;
-    }
-  }
-  return score;
-}
-
-function jsMinimax(board, rows, cols, k, lastR, lastC, lastP, depth, alpha, beta, player, isMax) {
-  const opp = player === 'x' ? 'o' : 'x';
-  if (lastP !== player && jsCheckWin(board, rows, cols, k, lastR, lastC, lastP))
-    return 100000;
-  if (depth === 0) {
-    if (lastP === player && jsCheckWin(board, rows, cols, k, lastR, lastC, lastP))
-      return 100000;
-    return jsEval(board, rows, cols, player);
-  }
-  const moves = jsAvailCols(board, cols);
-  if (moves.length === 0) return jsEval(board, rows, cols, player);
-
-  if (isMax) {
-    let best = alpha;
-    for (const c of moves) {
-      const res = jsDropPiece(board, rows, cols, c, player);
-      if (!res) continue;
-      const sc = jsMinimax(res.board, rows, cols, k, res.row, c, player, depth-1, best, beta, opp, false);
-      if (sc > best) best = sc;
-      if (best >= beta) break;
-    }
-    return best;
-  } else {
-    let best = beta;
-    for (const c of moves) {
-      const res = jsDropPiece(board, rows, cols, c, player);
-      if (!res) continue;
-      const sc = jsMinimax(res.board, rows, cols, k, res.row, c, player, depth-1, alpha, best, opp, true);
-      if (sc < best) best = sc;
-      if (best <= alpha) break;
-    }
-    return best;
-  }
-}
-
-function jsBestMove(board, rows, cols, k, player, depth) {
-  const opp = player === 'x' ? 'o' : 'x';
-  const moves = jsAvailCols(board, cols);
-  let bestCol = moves[0], bestScore = -Infinity;
-  for (const c of moves) {
-    const res = jsDropPiece(board, rows, cols, c, player);
-    if (!res) continue;
-    const sc = jsMinimax(res.board, rows, cols, k, res.row, c, player, depth-1, bestScore, Infinity, opp, false);
-    if (sc > bestScore) { bestScore = sc; bestCol = c; }
-  }
-  return bestCol;
-}
 
 // ============================================================
 // Prolog bridge - stateless API (human move + board init only)
@@ -660,40 +546,37 @@ async function humanClickCol(col) {
   }
 }
 
-function doAiMove() {
+async function doAiMove() {
   if (state.gameOver) return;
   state.aiThinking = true;
-  setStatus('ai', `ШІ (${state.currentPlayer.toUpperCase()}) думає...`);
+  setStatus('ai', `ШІ (${state.currentPlayer.toUpperCase()}) думає (SWI-Prolog)...`);
   disableArrows(true);
 
   const player = state.currentPlayer;
   const { board, rows, cols, k, depth } = state;
 
-  setTimeout(() => {
-    try {
-      const col = jsBestMove(board, rows, cols, k, player, depth);
-      const res = jsDropPiece(board, rows, cols, col, player);
-      if (!res) { setStatus('error', 'ШІ не знайшов хід'); return; }
+  try {
+    const resp = await fetch(AI_URL + '/ai', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ board, player, depth, rows, cols, k }),
+    });
+    if (!resp.ok) throw new Error('Сервер: HTTP ' + resp.status);
+    const data = await resp.json();
+    if (data.error) throw new Error(data.error);
 
-      const { board: newBoard, row } = res;
-      let result;
-      if (jsCheckWin(newBoard, rows, cols, k, row, col, player)) result = 'win';
-      else if (jsAvailCols(newBoard, cols).length === 0) result = 'draw';
-      else result = 'ok';
-
-      state.board = newBoard;
-      logMsg(player, `${player.toUpperCase()} (ШІ) → стовпець ${col} (рядок ${row})`);
-      renderBoard();
-      animateLastDrop(row - 1, col - 1);
-      handleResult(result, player);
-    } catch(e) {
-      setStatus('error', 'Помилка ШІ: ' + e);
-      console.error(e);
-    } finally {
-      state.aiThinking = false;
-      if (!state.gameOver) disableArrows(false);
-    }
-  }, 20);
+    state.board = data.board;
+    logMsg(player, `${player.toUpperCase()} (ШІ) → стовпець ${data.col} (рядок ${data.row})`);
+    renderBoard();
+    animateLastDrop(data.row - 1, data.col - 1);
+    await handleResult(data.result, player);
+  } catch(e) {
+    setStatus('error', 'Помилка ШІ: ' + e);
+    console.error(e);
+  } finally {
+    state.aiThinking = false;
+    if (!state.gameOver) disableArrows(false);
+  }
 }
 
 function handleResult(result, player) {
